--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -37,7 +37,8 @@
           justify-content: space-evenly;
 }
 
-.buttons {
+.button {
+  margin-top: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -45,23 +46,18 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 100%;
+  height: 10%;
 }
 
 .lock_button {
   position: absolute;
-  bottom: 0px;
-  margin: 10%;
+  bottom: 15px;
+  margin-left: 25px;
   background: #445EE2;
   border-radius: 5px;
   color: white;
   width: 80%;
   height: 44px;
-  margin-top: 20px;
-  margin-right: 10%;
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 16px;
@@ -86,5 +82,15 @@
 
 .lock_button div p {
   margin-left: 10px;
+}
+
+.tree {
+  height: 70%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: auto;
 }
 /*# sourceMappingURL=LeftSideBar.module.css.map */
