--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -9,7 +9,6 @@
 }
 
 .modal {
-  color: #1E272E;
   background: #FFFFFF;
   /* neutral dark */
   padding: 10px;
@@ -20,10 +19,8 @@
   position: fixed;
   top: 30vh;
   left: 10%;
-  height: 50%;
   width: 80%;
   z-index: 100;
-  text-align: center;
   overflow: hidden;
 }
 
@@ -80,7 +77,7 @@
   padding: 10px 20px;
   border: none;
   width: 30%;
-  margin: 1rem;
+  margin: 0.8rem;
   border-radius: 25px;
   color: #fff;
   font-size: 1.1rem;
@@ -98,6 +95,35 @@
 .heading {
   margin-top: 1.3rem;
   font-size: 2rem;
+  color: #1E272E;
+  text-align: center;
+}
+
+.folder_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.folder_name input {
+  width: 80%;
+  height: 2rem;
+  border: 1px solid #cab3b3;
+  margin-top: 2rem;
+  border-radius: 8px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  padding-left: 15px;
+  /* identical to box height */
+  letter-spacing: -0.02em;
+  /* primary text */
+  color: #1E272E;
 }
 
 @media (min-width: 768px) {
