--- a/src/UI/Modal.module.scss
+++ b/src/UI/Modal.module.scss
@@ -9,7 +9,7 @@
   }
   
   .modal {
-    color: #1E272E;
+    
     background: #FFFFFF;
     /* neutral dark */
     padding: 10px;
@@ -19,21 +19,15 @@
     position: fixed;
     top: 30vh;
     left: 10%;
-    height: 50%;
     width: 80%;
     z-index: 100;
-    text-align: center;
-    
     overflow: hidden;
+
     .contents{
-       // color: aquamarine;
         display: flex;
         justify-content: center;
-        flex-direction: column;
-       
-        
+        flex-direction: column; 
     }
-
   }
   .inputs{
       display: flex;
@@ -63,7 +57,7 @@
         padding: 10px 20px;
         border: none;//3px solid #494c50;
         width: 30%;
-        margin: 1rem;
+        margin: 0.8rem;
         border-radius: 25px;
         color: #fff;
         font-size: 1.1rem;
@@ -80,7 +74,35 @@
   .heading{
       margin-top: 1.3rem;
       font-size: 2rem;
+      color: #1E272E;
+      text-align: center;
   }
+  .folder_name{
+     display: flex;
+     justify-content: center;
+    input{
+      width:80%;
+      height: 2rem;
+      border:1px solid rgb(202, 179, 179);
+      margin-top: 2rem;
+      border-radius: 8px;
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 21px;
+      padding-left:15px;
+      /* identical to box height */
+
+      letter-spacing: -0.02em;
+
+      /* primary text */
+
+      color: #1E272E;
+    }
+    
+  }
+
   @media (min-width: 768px) {
     .modal {
       left: calc(50% - 20rem);
