--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -3,7 +3,17 @@
   padding: 10px 20px 0px 10px;
   background: rgba(247, 248, 250, 0.5);
   height: 100vh;
+  border-radius: 30px;
   width: 80vh;
+}
+
+.div1_dark {
+  position: relative;
+  padding: 10px 20px 0px 10px;
+  background: #2c2d31;
+  height: 100vh;
+  width: 80vh;
+  border-radius: 30px;
 }
 
 .add {
@@ -25,6 +35,36 @@
 }
 
 .add div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.add_dark {
+  width: 150px;
+  height: 44px;
+  margin-top: 20px;
+  margin-left: 10%;
+  border: 2px solid #5c6d7c;
+  border-radius: 5px;
+  background-color: transparent;
+  font-family: DM Sans;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 28px;
+  /* identical to box height, or 175% */
+  letter-spacing: -0.02em;
+  color: white;
+}
+
+.add_dark div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +121,41 @@
 }
 
 .lock_button div p {
+  margin-left: 10px;
+}
+
+.lock_button_dark {
+  position: absolute;
+  bottom: 15px;
+  margin-left: 25px;
+  background: transparent;
+  border-radius: 18px;
+  color: white;
+  width: 80%;
+  height: 44px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-size: 16px;
+  border: 2px solid black;
+  line-height: 28px;
+  /* identical to box height, or 175% */
+  letter-spacing: -0.02em;
+}
+
+.lock_button_dark div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.lock_button_dark div p {
   margin-left: 10px;
 }
 
