--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,6 +12,20 @@
   width: 100%;
 }
 
+.nav_dark {
+  padding: 50px;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  justify-items: center;
+  border-bottom: 2px solid #2c2d31;
+  width: 100%;
+}
+
 .bar {
   margin-left: 2%;
   width: 575px;
@@ -42,6 +56,41 @@
   border: none;
   font-size: 16px;
   outline: none;
+  background: transparent;
+}
+
+.bar_dark {
+  margin-left: 2%;
+  width: 575px;
+  border-radius: 30px;
+  background-color: #2c2d31;
+  width: 486px;
+  height: 44px;
+  font-size: 16px;
+  padding: 8px 100px 8px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.bar_dark img {
+  margin-top: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.bar_dark .searchbar_dark {
+  margin-left: 3px;
+  height: auto;
+  width: 460px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+  background: transparent;
+  color: #888;
 }
 
 .bar:hover {
@@ -59,7 +108,7 @@
   width: 200px;
   height: 44px;
   margin-right: 10%;
-  background-color: white;
+  background-color: transparent;
   border: 1px solid #445EE2;
   border-radius: 5px;
   font-family: DM Sans;
@@ -85,12 +134,19 @@
           justify-content: space-evenly;
 }
 
-.settings {
-  border: 1.5px solid  white;
-  background-color: white;
+.settings_dark {
+  border: 2px solid  black;
+  background-color: transparent;
   height: 44px;
   width: 65px;
-  border: 1px solid #DFE0E0;
+  margin-right: 10%;
+}
+
+.settings {
+  border: 1.5px solid  #dcdcdc;
+  background-color: transparent;
+  height: 44px;
+  width: 65px;
   margin-right: 10%;
 }
 
