--- a/src/components/Tree/TreeNode.module.css
+++ b/src/components/Tree/TreeNode.module.css
@@ -49,4 +49,8 @@ li {
   margin-left: 5px;
   padding-right: 2px;
 }
+
+.folder_dark:hover {
+  background-color: black;
+}
 /*# sourceMappingURL=TreeNode.module.css.map */
