--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,27 +1,38 @@
 @import'../../styles/variables.scss';
 
+.outer{
+  display: flex;
+  flex-direction: column;
+  height: 40%;
+  border-bottom: 1px solid #DFE0E0;
+}
+.outer_dark{
+  display: flex;
+  flex-direction: column;
+  border-bottom: 2px solid #2c2d31;
+}
 .nav{
-   padding: 50px;
-  height: 60%;
+  padding: 50px ;//50px 10px 50px;
+  //height: 20%;
   display: flex;
   justify-content: space-between;
  justify-items: center;
- border-bottom: 1px solid #DFE0E0;
+ //border-bottom: 1px solid #DFE0E0;
   width:100%;
 }
 
 .nav_dark{
   padding: 50px;
- height: 60%;
+// height: 60%;
  display: flex;
  justify-content: space-between;
 justify-items: center;
-border-bottom: 2px solid #2c2d31;
+// border-bottom: 2px solid #2c2d31;
  width:100%;
 }
 
 .bar{
-    margin-left: 2%;
+  //  margin-left: 2%;
     width:575px;
     border-radius:30px;
     border:1px solid #dcdcdc;
@@ -50,7 +61,7 @@ border-bottom: 2px solid #2c2d31;
     } 
 }
 .bar_dark{
-  margin-left: 2%;
+  //margin-left: 2%;
   width:575px;
   border-radius:30px;
   background-color:#2c2d31;
@@ -92,7 +103,7 @@ border-bottom: 2px solid #2c2d31;
   height: 44px;
   margin-right: 10%;
   background-color: transparent;
-
+  margin-left: 50px;
   border: 1px solid #445EE2;
   // padding-left: 10px;
   // padding-right: 100px;
@@ -153,3 +164,34 @@ button:hover{
       transform: scale(1.2);
     }
 }
+.crumbs{
+  margin-left: 50px;
+  color: #566474;
+  padding-bottom: 20px;
+
+}
+.crumbs_dark{
+  margin-left: 50px;
+  color: white;//#566474;
+  padding-bottom: 20px;
+
+}
+// /* width */
+// ::-webkit-scrollbar {
+//   width: 10px;
+// }
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: #f1f1f1;
+// }
+
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: #888;
+// }
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #555;
+// }
