--- a/src/components/Tree/TreeComponent.module.scss
+++ b/src/components/Tree/TreeComponent.module.scss
@@ -3,6 +3,15 @@
     display: flex!important;
     // position: relative;
 }
+
+// ::-webkit-scrollbar { width: 8px; height: 3px;}
+// ::-webkit-scrollbar-button {  background-color: #666; }
+// ::-webkit-scrollbar-track {  background-color: #646464;}
+// ::-webkit-scrollbar-track-piece { background-color: #000;}
+// ::-webkit-scrollbar-thumb { height: 0px; background-color: #666; border-radius: 3px;}
+// ::-webkit-scrollbar-corner { background-color: transparent;}
+// ::-webkit-resizer { background-color: #666;}
+
 .enclosure{
     box-sizing: border-box;
     padding-right: 10px;
