--- a/src/components/Tree/TreeNode.module.scss
+++ b/src/components/Tree/TreeNode.module.scss
@@ -20,7 +20,7 @@ li{
    }
 }
 .folder_dark{
-    color: white;
+    color:#b9c2d9;//white;// #798a9c;
     background: #242627;
     border-radius: 5px;
     width: 281px;
