--- a/src/components/LeftSideBar/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar/LeftSideBar.module.scss
@@ -89,7 +89,7 @@
    bottom: 15px;
   margin-left: 25px;
   background: #445EE2;
-  border-radius: 5px;
+  border-radius: 18px;
   color: white;
   width: 80%;
   height: 44px;
@@ -118,7 +118,7 @@
   position: absolute;
   bottom: 15px;
  margin-left: 25px;
- background:transparent;// #445EE2;
+ background: #445EE2;
  border-radius: 18px;
  color: white;
  width: 80%;
@@ -128,7 +128,7 @@
  font-style: normal;
  
  font-size: 16px;
- border:2px solid black ;
+ border:none;//2px solid black ;
  line-height: 28px;
 
  
