--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -141,7 +141,8 @@
   height: 100%;
 }
 button:hover{
-  opacity: 0.8;
+   opacity: 0.8;
+  //background-color: black;//#242627;
   img{
     transition: all .2s ease-in-out;
     
