--- a/src/UI/Modal.module.scss
+++ b/src/UI/Modal.module.scss
@@ -6,10 +6,14 @@
     height: 100vh;
     z-index: 10;
    background: rgba(30, 39, 46, 0.9);
-  }
-  
+}
+
+.error_message{
+  padding-top: 10px;
+  margin-left: 63px;
+  color: red;
+}
   .modal {
-    
     background: #FFFFFF;
     /* neutral dark */
     padding: 10px;
@@ -17,9 +21,9 @@
     box-sizing: border-box;
     border-radius: 10px;
     position: fixed;
-    top: 30vh;
-    left: 10%;
-    width: 80%;
+    top: 25vh;
+    left: 29%;
+    width: 600px;
     z-index: 100;
     overflow: hidden;
 
@@ -41,7 +45,6 @@
     border: 1px solid #C8D6E5;
     border-radius: 8px;
     margin: 1rem;
-    //background-color: #4f005f;
     font-size: 3rem;
     text-align: center;
     color: rgb(0, 0, 0);
@@ -49,7 +52,7 @@
   .buttons{
       display: flex;
       justify-content: center;
-      margin-top: 2rem;
+      margin-top: 1rem;
       
       button{
         outline: none;
@@ -83,7 +86,7 @@
     margin-left:4rem;
     display: flex;
     width: 100%;
-   // margin-left: 50px;
+    // margin-left: 50px;
     //justify-content: center;
     flex-direction: column;
     h2{
@@ -99,10 +102,11 @@
       color: #566474;
     }
     .file_name{
+      outline: none;
       display: block;
       width: 80%;
       height: 2rem;
-      border: 1px solid #cab3b3;
+      border: 1px solid  #DFE0E0;//#cab3b3;
       margin-top: 1.2rem;
       border-radius: 8px;
       font-family: DM Sans;
@@ -114,23 +118,49 @@
       letter-spacing: -0.02em;
       color: #1E272E;
     }
+    .file_name:placeholder{
+      padding: 0px;
+    }
     .file_content{
-      display: block;
-      width:80%;
-      height: 4rem;
-      border:1px solid rgb(202, 179, 179);
-      margin-top: 1.2rem;
-      //margin-left: 10px;
-      border-radius: 8px;
+      width: 80% !important;
+      outline: none;
+      padding: 10px;
+      margin-top: 30px;
+      margin-right: 10px;
+      border-radius: 10px;
       font-family: DM Sans;
       font-style: normal;
-      font-weight: 500;
+      font-weight: normal;
       font-size: 16px;
-      line-height: 21px;
-      padding-left:15px;
+      line-height: 28px;
+    /* identical to box height, or 175% */
+
       letter-spacing: -0.02em;
-      /* primary text */
-      color: #1E272E;
+
+    /* secondary text */
+
+    color: #566474;
+
+    justify-content: flex-start;
+    border: 1px solid #DFE0E0;
+    height: 230px !important;
+   box-sizing: border-box;
+      // //display: block;
+      // width:80%;
+      // height: 4rem;
+      // border:1px solid rgb(202, 179, 179);
+      // margin-top: 1.2rem;
+      // //margin-left: 10px;
+      // border-radius: 8px;
+      // font-family: DM Sans;
+      // font-style: normal;
+      // font-weight: 500;
+      // font-size: 16px;
+      // line-height: 21px;
+      // padding-left:15px;
+      // letter-spacing: -0.02em;
+      // /* primary text */
+      // color: #1E272E;
     }
 
   }
@@ -154,15 +184,105 @@
       letter-spacing: -0.02em;
 
       /* primary text */
-
       color: #1E272E;
     }
     
   }
 
-  @media (min-width: 768px) {
-    .modal {
-      left: calc(50% - 20rem);
-      width: 40rem;
+  // @media (min-width: 768px) {
+  //   .modal {
+  //     left: calc(50% - 20rem);
+  //     width: 40rem;
+  //   }
+  // }
+  .reset_pin{
+    margin-top: 10px;
+    margin-left:4rem;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+
+    h2{
+      justify-content: start;
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      
+      line-height: 28px;
+      /* identical to box height, or 175% */
+      letter-spacing: -0.02em;
+      /* secondary text */
+      color: #566474;
     }
+    .reset_pin_contents{
+      margin-bottom: 0px;
+      margin-top: 15px;
+    }
+    .reset_pin_input{
+      margin-top: 10px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      border: 1px solid #cab3b3;
+      width: 80%;
+      border-radius: 8px;
+      img{
+        height: 30px;
+        padding-right: 5px;
+      }
+    }
+    .reset_pin_name{
+      padding-top: 3px;
+      display: block;
+      width: 90%;
+      height: 2rem;
+      border:none;// 1px solid #cab3b3;
+      //margin-left: 3px;
+      border-radius: 8px;
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 21px;
+      padding-left: 10px;
+      letter-spacing: -0.02em;
+      color: #1E272E;
+      outline: none;
+    }
+    .reset_pin_name::placeholder{
+      padding: 0;
+    }
+  }
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  .fileContentModal_input{
+    
+   //margin: 100px;
+    outline: none;
+    padding: 10px;
+    margin-top: 30px;
+    margin-right: 10px;
+    border-radius: 10px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 28px;
+    /* identical to box height, or 175% */
+
+    letter-spacing: -0.02em;
+
+    /* secondary text */
+
+    color: #566474;
+
+    justify-content: flex-start;
+    border: 1px solid #DFE0E0;
+    height: 250px;
+   box-sizing: border-box;
   }
