--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -96,7 +96,7 @@
   bottom: 15px;
   margin-left: 25px;
   background: #445EE2;
-  border-radius: 5px;
+  border-radius: 18px;
   color: white;
   width: 80%;
   height: 44px;
@@ -130,7 +130,7 @@
   position: absolute;
   bottom: 15px;
   margin-left: 25px;
-  background: transparent;
+  background: #445EE2;
   border-radius: 18px;
   color: white;
   width: 80%;
@@ -138,7 +138,7 @@
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 16px;
-  border: 2px solid black;
+  border: none;
   line-height: 28px;
   /* identical to box height, or 175% */
   letter-spacing: -0.02em;
