--- a/src/components/Logo/DastavezLogo.module.css
+++ b/src/components/Logo/DastavezLogo.module.css
@@ -21,6 +21,10 @@
 .name {
   font-family: 'Pacifico', cursive;
   font-size: 32px;
-  color: #2b3c92;
+  font-weight: 200px;
+  -webkit-text-fill-color: white;
+  /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #2b3c92;
 }
 /*# sourceMappingURL=DastavezLogo.module.css.map */
