--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -67,15 +67,13 @@
 }
 
 .bar{
-  //  margin-left: 2%;
-    width:575px;
+  
     border-radius:30px;
     border:1px solid #dcdcdc;
-   
     width: 486px;
     height: 44px;
     font-size:16px;
-    padding: 8px 100px 8px 16px;
+    padding: 8px 10px 8px 16px;
     display: flex;
     justify-content: left;
 
@@ -88,11 +86,13 @@
     .searchbar{
       margin-left: 3px;
       height:auto;
-      width:460px;
+      width:5500px;
       border:none;
       font-size:16px;
       outline: none;
+     // background-color: #242627;
       background: transparent;
+      padding: 3px;
     } 
 }
 .bar_dark{
@@ -117,12 +117,12 @@
   .searchbar_dark{
     margin-left: 3px;
     height:auto;
-    width:460px;
+    width:560px;
     border:none;
     font-size:16px;
     outline: none;
     background: transparent;
-    color: #888;
+    color: #b9c2d9;// #888;
   } 
 }
 .bar:hover{
@@ -208,6 +208,73 @@ button:hover{
   padding-bottom: 20px;
 }
 
+.dataResult {
+  position: absolute;
+  z-index: 1;
+  left: 0px;
+  top: 55px;
+  width: 486px;
+  background: #FFFFFF;
+  border: 1px solid #EBF0F5;
+  box-sizing: border-box;
+  border-radius: 5px;
+  overflow: hidden;
+  overflow-y: auto;
+  .dataItem {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: black;
+    img{
+      width: 20.95px;
+      height: 14.24px;
+      margin-left: 5px;
+    }
+    p{
+      margin-left: 4px;
+    }
+  }
+}
+
+.dataResult::-webkit-scrollbar {
+  display: none;
+}
+
+.dataResult_dark {
+  position: absolute;
+  z-index: 1;
+  left: 0px;
+  top: 55px;
+  width: 486px;
+  background:#2c2d31;// #FFFFFF;
+  //border: 1px solid black;//#EBF0F5;
+  box-sizing: border-box;
+  border-radius: 5px;
+  overflow: hidden;
+  overflow-y: auto;
+  .dataItem {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: #b9c2d9;//black;
+    img{
+      width: 20.95px;
+      height: 14.24px;
+      margin-left: 5px;
+    }
+    p{
+      margin-left: 4px;
+    }
+  }
+}
+
+.dataResult_dark::-webkit-scrollbar {
+  display: none;
+}
+
+
 .icon_name{
   color: #566474;
 }
@@ -287,4 +354,8 @@ justify-items: center;
   width:65px;
   margin-right: 10%;
  
+}
+
+.search{
+  position: relative;
 }
