--- a/src/components/LeftSideBar/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar/LeftSideBar.module.scss
@@ -1,10 +1,20 @@
+.outer{
+  display: flex;
+   justify-content: center;
+   align-items: center;
+  // width:60vh;
+   //z-index: 1;
+   margin-left:0;
+   padding-left: 0;
+   padding-right: 10px;
+}
 .div1{
   position: relative;
-    padding:10px 20px 0px 10px;
+    padding:10px 20px 0px 8px;
     background: rgba(247, 248, 250, 0.5);
     height:100vh;
     border-radius:30px;
-    width:80vh;
+    width:60vh;
     box-sizing: border-box;
 }
 .div1_dark{
@@ -12,14 +22,15 @@
     padding:10px 20px 0px 10px;
     background:#2c2d31;// rgba(247, 248, 250, 0.5);
     height:100vh;
-    width:80vh;
-    border-radius:30px
+    width:60vh;
+    border-radius:30px;
+    box-sizing: border-box;
 }
 .add{
-  width: 150px;
+  width: 40%;
   height: 44px;
-  margin-top: 20px;
-  margin-left: 10%;
+  // margin-top: 20px;
+  // margin-left: 10%;
   
   background-color: white;
 
@@ -48,10 +59,10 @@
 
 }
 .add_dark{
-  width: 150px;
+  width: 40%;
   height: 44px;
-  margin-top: 20px;
-  margin-left: 10%;
+  // margin-top: 20px;
+  // margin-left: 10%;
   
   // background-color:#242627;// white;
 
@@ -78,11 +89,17 @@
 
 }
 
-.button{
+.buttons{
     margin-top: 15px;
     display: flex;
+    width:100% ;
     flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center;
     height: 10%;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    
 }
 .lock_button{
    position: absolute;
@@ -147,8 +164,32 @@
 }
 .tree{
   height: 70%;
+  width: 100%;
   box-sizing: border-box;
-
   display: flex;
   overflow: auto;
+  margin-top: 0px;
+}
+.resizer{
+  cursor: pointer;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+     height:50px;
+     width:50px;
+   // padding: 10px 5px;
+    .one{
+      width:2px;
+      height:40px;
+      margin:1px;
+      background-color: #888;
+    }
+    .two{
+      width:2px;
+      height:30px;
+      margin:1px;
+      background-color: #888;
+    }
 }
