--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,5 @@
 .addOptions {
-  position: absolute;
-  top: 110px;
-  right: 45px;
-  padding: 15px;
   border: 1px solid #EBF0F5;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   border-radius: 25px;
   background: white;
   display: -webkit-box;
@@ -21,7 +15,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-width: 170px;
 }
 
 .addOptions button {
@@ -38,10 +31,6 @@
 }
 
 .addOptions_dark {
-  position: absolute;
-  top: 110px;
-  right: 45px;
-  padding: 15px;
   border-radius: 25px;
   background: #2c2d31;
   display: -webkit-box;
@@ -57,7 +46,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-width: 170px;
 }
 
 .addOptions_dark button {
@@ -87,7 +75,7 @@
 .bar {
   border-radius: 30px;
   border: 1px solid #dcdcdc;
-  width: 486px;
+  width: 100%;
   height: 44px;
   font-size: 16px;
   padding: 8px 10px 8px 16px;
@@ -97,6 +85,9 @@
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bar img {
@@ -108,28 +99,30 @@
 .bar .searchbar {
   margin-left: 3px;
   height: auto;
-  width: 5500px;
+  width: 100%;
   border: none;
   font-size: 16px;
   outline: none;
   background: transparent;
-  padding: 3px;
 }
 
 .bar_dark {
-  width: 575px;
+  margin-right: 40px;
+  width: 100%;
   border-radius: 30px;
   background-color: #2c2d31;
-  width: 486px;
   height: 44px;
   font-size: 16px;
-  padding: 8px 100px 8px 16px;
+  padding: 8px 10px 8px 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bar_dark img {
@@ -141,7 +134,7 @@
 .bar_dark .searchbar_dark {
   margin-left: 3px;
   height: auto;
-  width: 560px;
+  width: 100%;
   border: none;
   font-size: 16px;
   outline: none;
@@ -161,7 +154,6 @@
 }
 
 .buttons {
-  margin-left: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -169,10 +161,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 100%;
+  margin-top: 10px;
+  width: 400px;
 }
 
 button:hover {
@@ -197,14 +187,17 @@ button:hover img {
 }
 
 .contents {
-  margin: 15px;
+  padding-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .contents .icons {
-  margin: 20px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -213,15 +206,18 @@ button:hover img {
 }
 
 .contents_dark {
+  padding-top: 20px;
   color: #94a8c0;
-  margin: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .contents_dark .icons {
-  margin: 20px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -237,21 +233,28 @@ button:hover img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   width: 100%;
+  padding-right: 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .crumbs {
-  margin-left: 50px;
+  margin-left: 15px;
   color: #566474;
   padding-bottom: 20px;
+  margin-right: 0px;
+  margin-top: 45px;
+  width: 90%;
 }
 
 .crumbs_dark {
-  margin-left: 50px;
+  margin-left: 15px;
   color: #b9c2d9;
   padding-bottom: 20px;
+  margin-right: 0px;
+  margin-top: 45px;
+  width: 90%;
 }
 
 .dataResult {
@@ -259,11 +262,9 @@ button:hover img {
   z-index: 1;
   left: 0px;
   top: 55px;
-  width: 486px;
+  width: 100%;
   background: #FFFFFF;
   border: 1px solid #EBF0F5;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   border-radius: 5px;
   overflow: hidden;
   overflow-y: auto;
@@ -291,6 +292,12 @@ button:hover img {
   margin-left: 4px;
 }
 
+.dataResult .dataItem:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  color: blue;
+}
+
 .dataResult::-webkit-scrollbar {
   display: none;
 }
@@ -300,10 +307,8 @@ button:hover img {
   z-index: 1;
   left: 0px;
   top: 55px;
-  width: 486px;
+  width: 100%;
   background: #2c2d31;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   border-radius: 5px;
   overflow: hidden;
   overflow-y: auto;
@@ -331,6 +336,12 @@ button:hover img {
   margin-left: 4px;
 }
 
+.dataResult_dark .dataItem:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  color: white;
+}
+
 .dataResult_dark::-webkit-scrollbar {
   display: none;
 }
@@ -344,11 +355,11 @@ button:hover img {
 }
 
 .modes {
-  width: 200px;
+  width: 150px;
   height: 44px;
-  margin-right: 10%;
+  margin-right: 40px;
+  margin-top: 15px;
   background-color: transparent;
-  margin-left: 50px;
   border: 1.5px solid #445EE2;
   border-radius: 5px;
   font-family: DM Sans;
@@ -375,26 +386,28 @@ button:hover img {
 }
 
 .nav {
-  padding: 50px;
+  padding-top: 30px;
+  padding-right: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  justify-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
 }
 
 .nav_dark {
-  padding: 50px;
+  padding-top: 30px;
+  padding-right: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  justify-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
 }
 
@@ -407,6 +420,9 @@ button:hover img {
       -ms-flex-direction: column;
           flex-direction: column;
   border-bottom: 1px solid #DFE0E0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 
 .outer_dark {
@@ -418,6 +434,9 @@ button:hover img {
       -ms-flex-direction: column;
           flex-direction: column;
   border-bottom: 2px solid #2c2d31;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 
 .settings {
@@ -425,7 +444,8 @@ button:hover img {
   background-color: transparent;
   height: 44px;
   width: 65px;
-  margin-right: 10%;
+  margin-right: 30px;
+  margin-top: 15px;
 }
 
 .settings_dark {
@@ -433,10 +453,15 @@ button:hover img {
   background-color: transparent;
   height: 44px;
   width: 65px;
-  margin-right: 10%;
+  margin-right: 30px;
+  margin-top: 15px;
 }
 
 .search {
+  width: 50%;
   position: relative;
+  margin-top: 15px;
+  height: 43.5px;
+  margin-right: 40px;
 }
 /*# sourceMappingURL=Navbar.module.css.map */
