--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,21 +1,15 @@
 @import'../../styles/variables.scss';
 
 .addOptions{
-  position: absolute;
-  top: 110px;
-  right: 45px;
-  padding: 15px;
-  //background: #FFFFFF;
+  
   border: 1px solid #EBF0F5;
-  box-sizing: border-box;
-  // border-radius: 5px;
   border-radius: 25px;
   background:white;//#2c2d31;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  min-width: 170px;
+  // min-width: 170px;
 
   button{
     background: none;
@@ -31,17 +25,15 @@
   }
 }
 .addOptions_dark{
-  position: absolute;
-  top: 110px;
-  right: 45px;
-  padding: 15px;
+  
+  // padding: 15px;
   border-radius: 25px;
   background:#2c2d31;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  min-width: 170px;
+  //min-width: 170px;
 
   button{
     background: none;
@@ -67,18 +59,20 @@
 }
 
 .bar{
-  
     border-radius:30px;
     border:1px solid #dcdcdc;
-    width: 486px;
+    width: 100%;
+    //min-width: 400px;
     height: 44px;
     font-size:16px;
     padding: 8px 10px 8px 16px;
     display: flex;
     justify-content: left;
+    align-items: center;
+    
 
     img{
-      margin-top: 2px;
+     margin-top: 2px;
      width: 20px;
      height: 20px;
     }
@@ -86,27 +80,28 @@
     .searchbar{
       margin-left: 3px;
       height:auto;
-      width:5500px;
+      width:100%;
       border:none;
       font-size:16px;
       outline: none;
      // background-color: #242627;
       background: transparent;
-      padding: 3px;
+      //padding: 3px;
     } 
 }
 .bar_dark{
   //margin-left: 2%;
-  width:575px;
+  margin-right:40px;
+  width:100%;
   border-radius:30px;
   background-color:#2c2d31;
- 
-  width: 486px;
+ // min-width: 400px;
   height: 44px;
   font-size:16px;
-  padding: 8px 100px 8px 16px;
+  padding: 8px 10px 8px 16px;
   display: flex;
   justify-content: left;
+  align-items: center;
 
   img{
     margin-top: 2px;
@@ -117,7 +112,7 @@
   .searchbar_dark{
     margin-left: 3px;
     height:auto;
-    width:560px;
+    width:100%;
     border:none;
     font-size:16px;
     outline: none;
@@ -134,11 +129,12 @@
 }
 
 .buttons{
-  margin-left: 10px;
+  
   display: flex;
   flex-direction: row;
-  justify-content:flex-end;
-  height: 100%;
+  
+  margin-top: 10px;
+  width: 400px;
 }
 button:hover{
    opacity: 0.8;
@@ -160,13 +156,12 @@ button:hover{
    background: rgba(30, 39, 46, 0.5);
 }
 .contents{
-  //background-color:blue;
-  margin: 15px;
+  padding-top: 20px;
   display: flex;
-  //width: 100%;
-  //height: 1000px;
+  width:100%;
+  flex-wrap: wrap;
    .icons{
-     margin: 20px;
+     padding: 20px;
     text-align: center;
    }
    .icons:hover{
@@ -174,14 +169,13 @@ button:hover{
    }
 }
 .contents_dark{
-  //background-color:blue;
+  padding-top: 20px;
   color:#94a8c0;
-  margin: 15px;
   display: flex;
-  //width: 100%;
-  //height: 1000px;
+  width:100%;
+  flex-wrap: wrap;
    .icons{
-     margin: 20px;
+     padding: 20px;
       text-align: center;
    }
    .icons:hover{
@@ -192,20 +186,33 @@ button:hover{
 .cover{
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
+  //box-sizing: border-box;
   width:100%;
+  // min-width: 440px;
+  padding-right: 10px;
+  // margin-right: 10px;
+  //background-color: red;
+  flex-wrap: wrap;
+  //  background-color: violet;
 }
 
 .crumbs{
-  margin-left: 50px;
+   margin-left: 15px;
   color: #566474;
   padding-bottom: 20px;
+  margin-right: 0px;
+  margin-top: 45px;
+  width: 90%;
+  
 
 }
 .crumbs_dark{
-  margin-left: 50px;
+  margin-left: 15px;
   color: #b9c2d9;//white;//#566474;
   padding-bottom: 20px;
+  margin-right: 0px;
+  margin-top: 45px;
+  width: 90%;
 }
 
 .dataResult {
@@ -213,10 +220,10 @@ button:hover{
   z-index: 1;
   left: 0px;
   top: 55px;
-  width: 486px;
+  width: 100%;
   background: #FFFFFF;
   border: 1px solid #EBF0F5;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   border-radius: 5px;
   overflow: hidden;
   overflow-y: auto;
@@ -235,6 +242,11 @@ button:hover{
       margin-left: 4px;
     }
   }
+  .dataItem:hover{
+    cursor:pointer;
+    text-decoration:underline;
+    color:blue
+  }
 }
 
 .dataResult::-webkit-scrollbar {
@@ -246,10 +258,10 @@ button:hover{
   z-index: 1;
   left: 0px;
   top: 55px;
-  width: 486px;
+  width: 100%;
   background:#2c2d31;// #FFFFFF;
   //border: 1px solid black;//#EBF0F5;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   border-radius: 5px;
   overflow: hidden;
   overflow-y: auto;
@@ -268,6 +280,11 @@ button:hover{
       margin-left: 4px;
     }
   }
+  .dataItem:hover{
+    cursor:pointer;
+    text-decoration:underline;
+    color:white;//rgb(191, 201, 147)
+  }
 }
 
 .dataResult_dark::-webkit-scrollbar {
@@ -285,11 +302,12 @@ button:hover{
 
 
 .modes{
-  width: 200px;
+  width: 150px;
   height: 44px;
-  margin-right: 10%;
+  margin-right: 40px;
+  margin-top: 15px;
   background-color: transparent;
-  margin-left: 50px;
+  
   border: 1.5px solid #445EE2;
   border-radius: 5px;
   font-family: DM Sans;
@@ -310,34 +328,41 @@ button:hover{
 }
 
 .nav{
-  padding: 50px ;//50px 10px 50px;
-  //height: 20%;
+  padding-top: 30px ;
+  padding-right: 0px;;
   display: flex;
-  justify-content: space-between;
- justify-items: center;
- //border-bottom: 1px solid #DFE0E0;
+  flex-direction: row;
+  flex-wrap: wrap;
   width:100%;
+  // padding-bottom: 40px;
 }
 .nav_dark{
-  padding: 50px;
-// height: 60%;
- display: flex;
- justify-content: space-between;
-justify-items: center;
-// border-bottom: 2px solid #2c2d31;
- width:100%;
+ 
+ padding-top: 30px ;
+ padding-right: 0px;;
+  display: flex;
+ //justify-items: center;
+  flex-wrap: wrap;
+//  align-items: center;
+  width:100%;
+ //padding-bottom: 40px;
 }
+
 
 .outer{
   display: flex;
   flex-direction: column;
-  
   border-bottom: 1px solid #DFE0E0;
+  flex-wrap: wrap;
+ width: 100%;
 }
 .outer_dark{
   display: flex;
   flex-direction: column;
   border-bottom: 2px solid #2c2d31;
+  flex-wrap: wrap;
+  width: 100%;
+  // padding-bottom :25px;
 }
 
 .settings{
@@ -345,17 +370,24 @@ justify-items: center;
   background-color: transparent;
   height: 44px;
   width:65px;
-  margin-right: 10%;
+  margin-right:30px;
+   margin-top: 15px;
 }
 .settings_dark{
   border:2px solid  black;;
   background-color:transparent;
   height: 44px;
   width:65px;
-  margin-right: 10%;
+  margin-right: 30px;
+   margin-top: 15px;
  
 }
 
 .search{
+  width:50%;
+ //min-width: 430px;
   position: relative;
+  margin-top: 15px;
+  height: 43.5px;
+  margin-right: 40px;
 }
