--- a/src/components/Tree/TreeComponent.module.scss
+++ b/src/components/Tree/TreeComponent.module.scss
@@ -1,6 +1,8 @@
 .class{
+    width: 100%;
     margin-top: 3rem!important;
     display: flex!important;
+    //background-color: blue;
     // position: relative;
 }
 
