--- a/src/components/Tree/TreeNode.module.css
+++ b/src/components/Tree/TreeNode.module.css
@@ -6,9 +6,8 @@ li {
   color: #566474;
   background: #EBF0F5;
   border-radius: 5px;
-  width: 281px;
+  width: 100%;
   height: 50px;
-  margin-left: 10px;
   margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,9 +28,8 @@ li {
   color: #b9c2d9;
   background: #242627;
   border-radius: 5px;
-  width: 281px;
+  width: 100%;
   height: 50px;
-  margin-left: 10px;
   margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
