--- a/src/components/Tree/TreeNode.module.scss
+++ b/src/components/Tree/TreeNode.module.scss
@@ -5,10 +5,10 @@ li{
     color: #566474;
     background: #EBF0F5;
     border-radius: 5px;
-    width: 281px;
+    width: 100%;
     height: 50px;
-    margin-left: 10px;
-    margin-top: 10px;
+    // margin-left: 10px;
+     margin-top: 10px;
     display: flex;
     justify-items: center;
     align-items: center;
@@ -23,9 +23,11 @@ li{
     color:#b9c2d9;//white;// #798a9c;
     background: #242627;
     border-radius: 5px;
-    width: 281px;
+    //width: 281px;
+    width: 100%;
     height: 50px;
-    margin-left: 10px;
+
+    //margin-left: 10px;
     margin-top: 10px;
     display: flex;
     justify-items: center;
