--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,8 @@
 .addOptions {
-  border: 1px solid #EBF0F5;
-  border-radius: 25px;
+  position: absolute;
+  right: 8%;
+  top: 14%;
+  border-radius: 18px;
   background: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15,6 +17,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 150px;
 }
 
 .addOptions button {
@@ -27,11 +30,18 @@
   font-size: 1rem;
   padding: 7px 10px;
   cursor: pointer;
-  border-bottom: 2px solid #EBF0F5;
+}
+
+.addOptions button:hover {
+  opacity: 1;
+  text-decoration: underline;
 }
 
 .addOptions_dark {
-  border-radius: 25px;
+  position: absolute;
+  right: 10%;
+  top: 12%;
+  border-radius: 18px;
   background: #2c2d31;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,6 +56,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 150px;
 }
 
 .addOptions_dark button {
@@ -61,15 +72,8 @@
   border-bottom: 2px solid #242627;
 }
 
-.addOptions:hover {
-  opacity: 0.8;
-}
-
-.addOptions:hover img {
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+.addOptions_dark button:hover {
+  text-decoration: underline;
 }
 
 .bar {
@@ -395,8 +399,8 @@ button:hover img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;
   width: 100%;
 }
 
@@ -437,6 +441,19 @@ button:hover img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
+}
+
+.addIcon {
+  border: 1.5px solid  #dcdcdc;
+  background-color: transparent;
+  height: 44px;
+  width: 65px;
+  margin-right: 30px;
+  margin-top: 15px;
+}
+
+.settings_cover {
+  position: relative;
 }
 
 .settings {
