--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,16 +1,17 @@
 @import'../../styles/variables.scss';
 
 .addOptions{
-  
-  border: 1px solid #EBF0F5;
-  border-radius: 25px;
+  position:absolute;
+  right:8%;
+  top:14%;
+  // border: 1px solid #EBF0F5;
+  border-radius: 18px;
   background:white;//#2c2d31;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  // min-width: 170px;
-
+  width:150px;
   button{
     background: none;
     outline: none;
@@ -21,20 +22,26 @@
     font-size: 1rem;
     padding: 7px 10px;
     cursor: pointer;
-    border-bottom: 2px solid #EBF0F5;// #566474;//#242627;
   }
+
+  button:hover{
+    opacity: 1;
+    text-decoration: underline;
+  }
+
 }
 .addOptions_dark{
-  
+  position:absolute;
+  right:10%;
+  top:12%;
   // padding: 15px;
-  border-radius: 25px;
+  border-radius: 18px;
   background:#2c2d31;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  //min-width: 170px;
-
+  width:150px;
   button{
     background: none;
     outline: none;
@@ -47,16 +54,12 @@
     cursor: pointer;
     border-bottom: 2px solid #242627;
   }
-}
-.addOptions:hover{
-  opacity: 0.8;
-  img{
-    transition: all .2s ease-in-out;
+  button:hover{
     
-   
-      transform: scale(1.2);
-    }
+    text-decoration: underline;
+  }
 }
+
 
 .bar{
     border-radius:30px;
@@ -328,11 +331,12 @@ button:hover{
 }
 
 .nav{
+  
   padding-top: 30px ;
   padding-right: 0px;;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap:wrap-reverse;
   width:100%;
   // padding-bottom: 40px;
 }
@@ -365,6 +369,18 @@ button:hover{
   // padding-bottom :25px;
 }
 
+.addIcon{
+ 
+  border:1.5px solid  #dcdcdc;//white;
+  background-color: transparent;
+  height: 44px;
+  width:65px;
+  margin-right:30px;
+   margin-top: 15px;
+}
+.settings_cover{
+  position: relative;
+}
 .settings{
   border:1.5px solid  #dcdcdc;//white;
   background-color: transparent;
